# event-calendar

./: .gitignore  .gitmodules  .treefmt.toml  AGENTS.md  Makefile  README.md  cabal.project  cabal.project.freeze  calendar-features.md  calendar-statics.md  devenv.nix  devenv.yaml  overlays.nix  overrides.nix  package.json
.github/workflows/: build.yml  deploy.yml  hourly-build.yml  scheduled.yml
elm-app/: elm.json  index.html  main.css  main.js  package.json  pnpm-lock.yaml  vite.config.mjs
elm-app/public/: site.webmanifest
elm-app/src/: Api.elm  Auth.elm  DateUtils.elm  Geocoding.elm  I18n.elm  Main.elm  Ports.elm  Route.elm  Types.elm
elm-app/src/Page/: Calendar.elm  EventDetail.elm  EventEdit.elm  Events.elm
elm-app/src/View/: Calendar.elm  EventDetail.elm  EventForm.elm  EventList.elm  Events.elm  FinnishDatePicker.elm  Icons.elm  Layout.elm  MapWidget.elm
elm-app/tests/: ApiTest.elm  AuthTest.elm  CalendarTest.elm  DateUtilsTest.elm  GeocodingTest.elm  I18nTest.elm  MainTest.elm  RouteTest.elm
fixtures/: keycloak-pocketbase-realm.json
fixtures/pb_migrations/: 1700000000_initial_schema.js
pkgs/: npm-tools.nix  package-lock.json  package.json
scripts/: generate-statics.js  generate-utils.js
src/lib/: pocketbase.ts
src/routes/: +page.svelte
static/fonts/: outfit.css
statics/: statics.cabal
statics/app/: Main.hs
statics/src/: Config.hs  DateUtils.hs  DescriptionHtml.hs  FeedGen.hs  GeoJsonGen.hs  HtmlGen.hs  ICalGen.hs  ImageFetcher.hs  PocketBase.hs
statics/tests/: Main.hs
